<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
        <TextView android:text="@string/carrier_text" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="match_parent"></TextView>
        <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:text="@string/new_carriertext"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/txtCarrierText" android:maxLength="16"></EditText>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:id="@+id/btnSaveCarrierText"></Button>
    </LinearLayout>
